...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.inventory.view.MainActivity">

        <include
            android:id="@+id/inventory_search_bar"
            layout="@layout/inventory_search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/homepage_top_bar_height"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/inventory_item_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{isInventoryLoading ? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/home_bottom_navigation_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inventory_search_bar"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_animation" />
...
