...
            android:textColor="@color/filter_text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/end_vertical_guide"
            app:layout_constraintTop_toTopOf="@id/top_horizontal_guide" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inventory_search_text_field"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Search"
            android:background="@drawable/rounded_corner_shape_max_radius"
            android:hint="@{selectedOption.empty || selectedOption == null ? `Search`: `Search by `+selectedOption.toLowerCase()}"
...
